--- a/gsap_01/style.css
+++ b/gsap_01/style.css
@@ -1,3 +1,7 @@
+:root{
+    --pad-x: 30px;
+    --pad-y: 50px;
+}
 *{
     margin: 0;
     padding: 0;
@@ -26,6 +30,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-inline: var(--pad-x);
 }
 /* logo */
 .logoEnd{
@@ -41,6 +46,20 @@ nav{
 /* *main -----------------------------------------*/
 section.main{
     flex-grow: 1;
+    max-width: 1024px;
+    width: 100%;
+    height: 100dvh;
+    margin-inline: auto;
+    padding-block: 50px;
+    padding-inline: var(--pad-x);
+
+}
+/* box */
+.box{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background: radial-gradient(crimson, #141414);
 }
 /* *footer */
 footer{
@@ -52,6 +71,8 @@ footer{
     grid-template-columns: repeat(3,1fr);
     gap: 15px;
     color: crimson;
+    padding-inline: var(--pad-x);
+
 }
 footer>div{
     display: flex;
